# AudioAgent

./: .gitignore  README.md  basic_agent.py  ffmpeg_tool.py  main.ipynb  main.py  mir_tool.py  pyproject.toml
.github/: FUNDING.yml
tools/: ffmpeg_tool.py
